aws/basic/network.tf
# Data

data "aws_availability_zones" "available" {
  state = "available"
}


# Resources

# Networking #

# VPC

module "app" {
  source  = "terraform-aws-modules/vpc/aws"
  version = "5.13.0"

  cidr = var.vpc_cidr_block

  azs = slice(data.aws_availability_zones.available.names, 0, length(data.aws_availability_zones.available.names))
  #private_subnets = ["10.0.1.0/24", "10.0.2.0/24", "10.0.3.0/24"]
  public_subnets = [for subnet in range(var.vpc_public_subnet_count) : cidrsubnet(var.vpc_cidr_block, 8, subnet)]

  enable_nat_gateway      = false
  enable_vpn_gateway      = false
  enable_dns_hostnames    = true                        # make var
  map_public_ip_on_launch = var.map_public_ip_on_launch # VM's get public ip on launch

  tags = merge(local.common_tags, { Name = "${local.naming_prefix}-vpc" })
}

/*  REPLACED BY VPC MODULE ABOVE
resource "aws_vpc" "app" {
  cidr_block           = var.vpc_cidr_block
  enable_dns_hostnames = true

  tags = merge(local.common_tags, { Name = "${local.naming_prefix}-vpc" })
}

# Internet Gateway

resource "aws_internet_gateway" "app" {
  vpc_id = aws_vpc.app.id

  tags = merge(local.common_tags, { Name = "${local.naming_prefix}-internet-gateway" })
}

# Subnets

resource "aws_subnet" "public_subnets" {
  count                   = var.vpc_public_subnet_count
  cidr_block              = cidrsubnet(var.vpc_cidr_block, 8, count.index)
  vpc_id                  = aws_vpc.app.id
  map_public_ip_on_launch = var.map_public_ip_on_launch # VM's get public ip on launch
  availability_zone       = data.aws_availability_zones.available.names[count.index % length(data.aws_availability_zones.available.names)]

  tags = merge(local.common_tags, { Name = "${local.naming_prefix}-public-subnet-${count.index}" })
}


# Routing

resource "aws_route_table" "app" {
  vpc_id = aws_vpc.app.id
  tags   = merge(local.common_tags, { Name = "${local.naming_prefix}-route-table" })

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.app.id
  }
}

resource "aws_route_table_association" "app_subnets" {
  count          = var.vpc_public_subnet_count
  subnet_id      = aws_subnet.public_subnets[count.index].id
  route_table_id = aws_route_table.app.id
}
*/

# Security groups

resource "aws_security_group" "lb_sg" {
  name   = "${local.naming_prefix}-nginx_lb_sg"
  vpc_id = module.app.vpc_id
  tags   = local.common_tags

  # HTTP inbound from anywhere
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Any outbound to internet
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "nginx_sg" {
  name   = "${local.naming_prefix}-nginx_sg"
  vpc_id = module.app.vpc_id //aws_vpc.app.id
  tags   = local.common_tags

  # HTTP inbound from anywhere
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = [var.vpc_cidr_block]
  }

  # Any outbound to internet
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
